xml_parser & xml_writer done

--- a/libft/makefile
+++ b/libft/makefile
@@ -39,7 +39,7 @@ SRC_NAME_OFF = ft_strlen.c ft_strdup.c ft_strcpy.c ft_strncpy.c ft_strcat.c \
 
 SRC_NAME_PIMP = ft_openfile.c ft_readfile.c ft_closefile.c get_next_line.c \
 				ft_realloc_free.c ft_strjoin_free.c ft_tabint.c \
-				ft_strcat_lin.c xml_parser.c
+				ft_strcat_lin.c xml_parser.c xml_writer.c
 
 SRC_NAME_GRAPH = aa.c awklm_string_put.c bb.c cc.c colons.c dd.c dot.c \
 draw_high_letter.c ee.c eight.c empty_box.c exclamation.c ff.c five.c four.c \
